--- a/dhis-2/pom.xml
+++ b/dhis-2/pom.xml
@@ -1043,15 +1043,17 @@
         <artifactId>geronimo-jta_1.1_spec</artifactId>
         <version>1.1.1</version>
       </dependency>
+
       <dependency>
-        <groupId>com.mchange</groupId>
-        <artifactId>c3p0</artifactId>
-        <version>0.9.5.5</version>
+        <groupId>com.zaxxer</groupId>
+        <artifactId>HikariCP</artifactId>
+        <version>3.4.1</version>
       </dependency>
+
       <dependency>
         <groupId>org.postgresql</groupId>
         <artifactId>postgresql</artifactId>
-        <version>42.2.5</version>
+        <version>42.2.8</version>
       </dependency>
 
       <!-- Flyway -->
